# montithings

./: .codeclimate.yml  .deepsource.toml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .vsconfig  CONTRIBUTING.md  Dockerfile  README.md  build.gradle  buildapplications.sh  dockerBuild.sh  gradle.properties  installLinux.sh  installMac.sh  installWindows.ps1  pom.xml  requirements.txt  settings.gradle  settings.xml  start.sh  terraform_azure.tf
generators/montithings2cpp/src/main/resources/lib/raspberrypi/: ADC.h  CMakeLists.txt  Pi2c.cpp  Pi2c.h  RaspUtils.cpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/: AbstractIPCClient.h  AbstractIPCServer.h  CMakeLists.txt  DDSClient.h  DDSMessage.idl  DDSParticipant.h  DDSPort.h  DataSource.h  EventObserver.h  EventSource.h  IComponent.h  IComputable.h  IPCPort.h  InOutPort.h  IncomingIPCPort.h  IncomingWSPort.h  MTLibrary.cpp  MTLibrary.h  ManagementCommunication.cpp  ManagementCommunication.h  ManagementMessageProcessor.h  Message.h  MessageAcceptor.h  MessageProvider.h  MqttClient.cpp  MqttClient.h  MqttConfigRequester.cpp  MqttConfigRequester.h  MqttPort.h  MqttUser.h  MultiPort.h  OutgoingIPCPort.h  OutgoingWSPort.h  Port.h  PortLink.h  Serializers.h  Serializers.test.cpp  UniqueElement.h  Utils.cpp  Utils.h  (+1 more)
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/catch2/: catch.hpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/cereal/: README  access.hpp  cereal.hpp  macros.hpp  specialize.hpp  version.hpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/cereal/details/: helpers.hpp  polymorphic_impl.hpp  polymorphic_impl_fwd.hpp  static_object.hpp  traits.hpp  util.hpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/cereal/types/: array.hpp  atomic.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  map.hpp  (+22 more)
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/collections/: Collection.h  List.h  Map.h  Set.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/cpp-base64/: CMakeLists.txt
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/cpp-httplib/: httplib.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/easyloggingpp/: easylogging++.cpp  easylogging++.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/hmac_sha256/: hmac_sha256.cpp  hmac_sha256.h  sha256.cpp  sha256.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/json/: json.hpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/logtracing/: Collector.cpp  Collector.h  Externals.cpp  Externals.h  GlobalStorage.cpp  GlobalStorage.h  LogTracer.cpp  LogTracer.h  TimeUtils.h  Utils.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/messages/: Message.h  PortToSocket.h  PortToSocketMessage.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/mtlibrary/: Delay.cpp  Log.cpp  MTLibrary.h  Now.cpp  Now_NS.cpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/nngpp/: LICENSE  aio.h  aio_view.h  buffer.h  core.h  ctx.h  ctx_view.h  dialer.h  dialer_view.h  error.h  listener.h  listener_view.h  msg.h  msg_body.h  msg_header.h  msg_view.h  nngpp.h  option.h  pipe.h  pipe_view.h  socket.h  socket_view.h  stat.h  stat_view.h  url.h  url_view.h  view.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/patterns/: AutoregressiveAnomalyDetection.cpp  AutoregressiveAnomalyDetection.h  AzureBlobStorageClient.cpp  AzureBlobStorageClient.h  LinearRegression.cpp  LinearRegression.h  MTLinearRegression.cpp  MTLinearRegression.h  MultivariateAutoregressiveAnomalyDetection.cpp  MultivariateAutoregressiveAnomalyDetection.h  MultivariateAutoregressivyAnomalyDetection.cpp  MultivariateAutoregressivyAnomalyDetection.h  PostgresClient.cpp  PostgresClient.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/rigtorp/: SPSCQueue.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/sole/: sole.hpp
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/tclap/: Arg.h  ArgContainer.h  ArgException.h  ArgGroup.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DeferDelete.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  VERSION  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  sstream.h
generators/montithings2cpp/src/main/resources/rte/montithings-RTE/tl/: optional.hpp
services/log-tracing/: .gitignore  CMakeLists.txt  DDSClientImp.cpp  DDSClientImpl.h  Dockerfile  README.md  build.sh  dcpsconfig.ini  dockerBuild.sh  dockerRun.sh  dockerRunLocal.sh  dockerStop.sh  entrypoint.sh  main.cpp
services/log-tracing/frontend/: .eslintrc.js  Dockerfile  README.md  babel.config.js  dockerBuild.sh  dockerRun.sh  dockerRunLocal.sh  package-lock.json  package.json  vue.config.js
services/log-tracing/frontend/public/: index.html  jquery.flowchart.js  jquery.flowchart.min.css  jquery.flowchart.min.js  style.css
services/log-tracing/frontend/src/: main.js
services/log-tracing/frontend/src/components/: Inputs.vue  LogTable.vue  Traces.vue  Tracing.vue  VariableAssignments.vue
services/log-tracing/frontend/src/router/: index.js
services/log-tracing/frontend/src/store/: index.js
services/log-tracing/frontend/src/views/: Home.vue
services/log-tracing/lib/: crow_all.h
services/recorder/: CMakeLists.txt  Dockerfile  MessageFlowRecorder.cpp  MessageFlowRecorder.h  README.md  RecordProcessor.cpp  RecordProcessor.h  build.sh  clear.sh  dcpsconfig.ini  dockerBuild.sh  dockerRun.sh  main.cpp
services/recorder/docker_recordings/: .gitignore
services/recorder/lib/: cxxopts.hpp  loguru.cpp  loguru.hpp
(+3589 files in other folders)
